--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI dev build
 on:
   push:
       branches:
-        - dev-*
+        - master
 
 jobs:
   build:
@@ -25,7 +25,7 @@ jobs:
     - name: Publish API to registry
       uses: swisschain/Publish-Docker-Github-Action@master
       with:
-        name: swisschains/antares-antares-client-api:dev
+        name: swisschains/antares-antares-client-api:master
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         workdir: ./publish-api
