--- a/src/AntaresClientApi/AntaresClientApi.csproj
+++ b/src/AntaresClientApi/AntaresClientApi.csproj
@@ -21,9 +21,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit" Version="6.3.2" />
-    <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="6.3.2" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="6.3.2" />
+    <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.2.6" />
+    <PackageReference Include="MyNoSqlServer.DataReader" Version="1.2.16" />
+    <PackageReference Include="Lykke.Common" Version="7.5.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AntaresClientApi.ApiContract\AntaresClientApi.ApiContract.csproj" />
+    <ProjectReference Include="..\AntaresClientApi.Domain\AntaresClientApi.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
