--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,7 @@ node_modules
 **/launchSettings.json
 /src/**/appsettings.json
 /src/**/appsettings.*.json
+/tests/**/appsettings.json
+/tests/**/appsettings.*.json
 **/*sonar*
 /client/**/*.xml
