--- a/src/AntaresClientApi.Database/AntaresClientApi.Database.csproj
+++ b/src/AntaresClientApi.Database/AntaresClientApi.Database.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="MeData\" />
+    <ProjectReference Include="..\AntaresClientApi.Domain.Models\AntaresClientApi.Domain.Models.csproj" />
   </ItemGroup>
 
 </Project>
