Implement prices and order books

--- a/src/AntaresClientApi/AntaresClientApi.csproj
+++ b/src/AntaresClientApi/AntaresClientApi.csproj
@@ -24,12 +24,13 @@
     <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.2.6" />
     <PackageReference Include="MyNoSqlServer.DataReader" Version="1.2.16" />
     <PackageReference Include="Lykke.Common" Version="7.5.0" />
+    <PackageReference Include="Swisschain.Antares.OrderBooks.MyNoSql" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Swisschain.Sdk.Server" Version="6.6.0" />
     <PackageReference Include="Swisschain.Service.Assets.Client" Version="1.1.5" />
-    
+    <PackageReference Include="Swisschain.MatchingEngine.Client" Version="3.0.0-beta.3" />
   </ItemGroup>
 
   <ItemGroup>
