--- a/src/AntaresClientApi.Domain/AntaresClientApi.Domain.csproj
+++ b/src/AntaresClientApi.Domain/AntaresClientApi.Domain.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="Lykke.Common" Version="7.5.0" />
 
     <PackageReference Include="Swisschain.Service.Assets.Client" Version="1.1.5" />
+
+    <PackageReference Include="Swisschain.MatchingEngine.Client" Version="3.0.0-beta.3" />
+    <PackageReference Include="Swisschain.Antares.OrderBooks.MyNoSql" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
