--- a/src/AntaresClientApi/AntaresClientApi.csproj
+++ b/src/AntaresClientApi/AntaresClientApi.csproj
@@ -21,9 +21,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.8" />
     <PackageReference Include="MyNoSqlServer.DataWriter" Version="1.2.6" />
     <PackageReference Include="MyNoSqlServer.DataReader" Version="1.2.16" />
     <PackageReference Include="Lykke.Common" Version="7.5.0" />
+    <PackageReference Include="prometheus-net" Version="3.6.0" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="3.6.0" />
+    <PackageReference Include="prometheus-net.DotNetRuntime" Version="3.4.0" />
     <PackageReference Include="Swisschain.Antares.OrderBooks.MyNoSql" Version="1.0.0" />
   </ItemGroup>
 
